<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFBF0">

        <RelativeLayout
            android:id="@+id/camp_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/camp_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/ImageNotFound"
                    android:src="@drawable/footer_camp_unselected" />

                <TextView
                    android:id="@+id/camp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="17sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/footer_camp"
                    android:textColor="@color/footerText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/equipment_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/equipment_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/ImageNotFound"
                    android:src="@drawable/footer_equipment_unselected" />

                <TextView
                    android:id="@+id/equipment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="17sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/footer_equipment"
                    android:textColor="@color/footerText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bag_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bag_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/ImageNotFound"
                    android:src="@drawable/footer_bag_unselected" />

                <TextView
                    android:id="@+id/bag_text"
                    android:layout_width="wrap_content"
                    android:layout_height="17sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/footer_bag"
                    android:textColor="@color/footerText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/battle_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/battle_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/ImageNotFound"
                    android:src="@drawable/footer_battle_unselected" />

                <TextView
                    android:id="@+id/battle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="17sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/footer_battle"
                    android:textColor="@color/footerText" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/settings_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/ImageNotFound"
                    android:src="@drawable/footer_settings_unselected" />

                <TextView
                    android:id="@+id/settings_text"
                    android:layout_width="wrap_content"
                    android:layout_height="17sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/footer_settings"
                    android:textColor="@color/footerText" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>